--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tic_tac_toe">
    <application
-        android:label="tic_tac_toe"
+        android:label="Tacc"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
