--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
   modal_bottom_sheet: ^2.0.1
+  flutter_svg: ^1.0.3
+  url_launcher: ^6.1.2
 
 dev_dependencies:
   flutter_test:
