--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   modal_bottom_sheet: ^2.0.1
   flutter_svg: ^1.0.3
   url_launcher: ^6.1.2
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
